# CatelliteV2F

./: .gitignore  CatelliteV2F.bat  LICENSE  LICENSES  install.nsi  pyproject.toml  requirements.txt
python/: requirements.txt  setup.bat  setup_library.bat
src/: convert_process.py  main.py  trial_manager.py  utils.py
